--- a/.env.local
+++ b/.env.local
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=onlineprd-server
-DB_USERNAME=onlineprd-server
-DB_PASSWORD=q4kb7rRnCebYfcby
+DB_DATABASE=onlineprd_server
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
